     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  Zope 2.8.5 (unreleased)

    Bugs Fixed

      - Collector #1904: On Mac OS X avoid a spurious OSError when
        zopectl exits.

      - CopySupport: Reverted workaround in '_verifyObjectPaste'.
        'checkPermission' now respects proxy roles, so the warkaround
        introduced to fix http://www.zope.org/Collectors/Zope/78 is no longer
        needed. Meta types listed in all_meta_types need a 'permission' key.

      - Collector #1774:  Harmonize the implementation of
        AccessControl.ZopeSecurityPolicy.checkPermission
        with 'validate', checking ownership and proxy roles if an
        executable object is on the stack.

      - AccessControl.SecurityInfo: Fixed problem with
        setPermissionDefault when the permission wasn't used anywhere
        else in the class to protect methods.

      - Collector #1957:  Made ZPublisher.HTTPResponse._error_html
        return conformant XHTML.

      - Collector #1891:  Backported changes to ZCatalog regression
        tests, removing use of 'whrandom' (and its 'seed' function).

      - Collector #1621, #1894:  Added BBB alias for 'whrandom'
        in AccessControl/DTML.py and RestrictedPython/Utilities.py.  The
        alias will be removed in Zope 2.10.

      - Collector #1954: DocumentTemplate.DT_String:  remove non-XHTML
        wart from error message.

      - Fixed unclear security declarations. Warn when an attempt is
        made to have a security declaration on a nonexistent method.

      - OFS Application: While deprecated since years, old-style product
        metadata in the __init__.py did not show deprecation warnings. Added